--- a/JVM/类加载.md
+++ b/JVM/类加载.md
@@ -24,6 +24,11 @@
 
 ## 4.1 加载
 
+- 过程
+  1. java文件先被编译为class文件
+  2. 直到创建相应对象时才会通过类加载器将class文件加载到JVM内存中（懒惰加载，无new不加载类，new了不调用也不加载类）
+  3. 在内存中为Class对象信息和对象实例分配空间
+
 - 将【类的字节码】加载到【方法区】中，使用C++的instanceKlass描述Java类，会先加载父类，且加载和链接可能交替运行
 
 - instanceKlass这种【元数据】存储在方法区（元空间），但_java_mirror存储在【堆】中
