--- a/网络/计算机网络.md
+++ b/网络/计算机网络.md
@@ -195,9 +195,9 @@
    3. MAC帧发送到网关路由器
    4. 由于DHCP只知道网关IP不知道网关MAC，需要使用ARP：主机生成目的IP为网关IP、目的MAC为全1的MAC帧
    5. 网关将MAC发回给主机
-3. DNS解析域名
+3. DNS解析域名（如果本机hosts文件有则跳过）
    1. 网关将IP数据报转发到响应路由
-   2. 到达DNS服务器后查找待解析域名的IP，发回主机
+   2. 到达DNS服务器后查找待解析域名的IP，发回主机（一个服务器一个IP，一个服务器多个域名即虚拟主机，访问时仍需带上host）
 4. HTTP请求页面
    1. 与HTTP服务器三次握手建立连接，端口为80
    2. 连接建立后，浏览器生成HTTP GET报文发给服务器
